# Tariff-News-MCP-Server

./: README.md  mcp_settings.json  project_prompt.md  pyproject.toml  requirements.txt
src/tariff_news_server/: __init__.py  schemas.py  server.py  tool.py
